package com.skplanet.storeplatform.sac.client.intfmessage.common.vo;

option java_package = "com.skplanet.storeplatform.sac.client.intfmessage.common.vo";

import "intfmessage/miscellaneous/AnnouncementProto.proto";

message CommonResponse {
	optional string baseUrl	= 1;       //Base URL
	optional int32 totalCount = 2;     //총 건수

	/*
	 * 긴급공지
	 *
	 * > type : 공지사항 유형
	 * > title : 공지사항 제목
	 * > date : 등록일
	 * > announcementExplain: 공지사항 설명
	 */
	optional com.skplanet.storeplatform.sac.client.intfmessage.miscellaneous.vo.Announcement announcement = 3;

}